@@ -391,6 +391,9 @@ class UrlParseTestCase(unittest.TestCase):
         self.checkJoin('http://a/b/c/d/e/', '../../f/g', 'http://a/b/c/f/g')
         self.checkJoin('http://a/b/', '../../f/g/', 'http://a/f/g/')
 
+        # issue 23703: don't duplicate filename
+        self.checkJoin('a', 'b', 'b')
+
     def test_RFC2732(self):
         str_cases = [
             ('http://Test.python.org:5432/foo/', 'test.python.org', 5432),
