@@ -36,6 +36,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23703: Fix a regression in urljoin() introduced in 901e4e52b20a.
+  Patch by Demian Brecht.
+
 - Issue #4254: Adds _curses.update_lines_cols() Patch by Arnon Yaari
 
 - Issue 19933: Provide default argument for ndigits in round. Patch by
